--- a/section.html
+++ b/section.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>temp</title>
-    <link rel="stylesheet" media="screen" href="/static/slider/index-3d7ae9b9cc43ed6fa4c80ac27847dc3fb7c72330a759d5c3920cfd4501ef2c9e.css" />
+    <link rel="stylesheet" media="screen" href="static/slider/index-3d7ae9b9cc43ed6fa4c80ac27847dc3fb7c72330a759d5c3920cfd4501ef2c9e.css" />
       <link rel="stylesheet" href = "static/main.css"/>
   </head>
 
@@ -20,7 +20,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -32,7 +32,7 @@
                   class="lazyload lazypreload"
                   data-sizes="auto"
                   data-aspectratio="0.8029411764705883"
-                  data-src="/static/images/pic1.png"
+                  data-src="static/images/pic1.png"
                 />
             </div>
           </div>
@@ -41,7 +41,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -55,7 +55,7 @@
                   preload="none"
                   loop
                   muted
-                  src="/static/videos/video.mp4"
+                  src="static/videos/video.mp4"
                 />
             </div>
           </div>
@@ -64,7 +64,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -85,7 +85,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -99,7 +99,7 @@
                   preload="none"
                   loop
                   muted
-                  src="/static/videos/video.mp4"
+                  src="static/videos/video.mp4"
                 />
             </div>
           </div>
@@ -108,7 +108,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -120,7 +120,7 @@
                   class="lazyload lazypreload"
                   data-sizes="auto"
                   data-aspectratio="0.8029411764705883"
-                  data-src="/static/images/pic3.png"
+                  data-src="static/images/pic3.png"
                 />
             </div>
           </div>
@@ -129,7 +129,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -150,7 +150,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -164,7 +164,7 @@
                   preload="none"
                   loop
                   muted
-                  src="/static/videos/video.mp4"
+                  src="static/videos/video.mp4"
                 />
             </div>
           </div>
@@ -173,7 +173,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -185,7 +185,7 @@
                   class="lazyload lazypreload"
                   data-sizes="auto"
                   data-aspectratio="0.8029411764705883"
-                  data-src="/static/images/pic1.png"
+                  data-src="static/images/pic1.png"
                 />
             </div>
           </div>
@@ -194,7 +194,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -215,7 +215,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -227,7 +227,7 @@
                   class="lazyload lazypreload"
                   data-sizes="auto"
                   data-aspectratio="0.8029411764705883"
-                  data-src="/static/images/pic3.png"
+                  data-src="static/images/pic3.png"
                 />
             </div>
           </div>
@@ -236,7 +236,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -248,7 +248,7 @@
                   class="lazyload lazypreload"
                   data-sizes="auto"
                   data-aspectratio="0.8029411764705883"
-                  data-src="/static/images/pic1.png"
+                  data-src="static/images/pic1.png"
                 />
             </div>
           </div>
@@ -257,7 +257,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -278,7 +278,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -290,7 +290,7 @@
                   class="lazyload lazypreload"
                   data-sizes="auto"
                   data-aspectratio="0.8029411764705883"
-                  data-src="/static/images/pic3.png"
+                  data-src="static/images/pic3.png"
                 />
             </div>
           </div>
@@ -299,7 +299,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -313,7 +313,7 @@
                   preload="none"
                   loop
                   muted
-                  src="/static/videos/video.mp4"
+                  src="static/videos/video.mp4"
                 />
             </div>
           </div>
@@ -322,7 +322,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -336,7 +336,7 @@
                   preload="none"
                   loop
                   muted
-                  src="/static/videos/video.mp4"
+                  src="static/videos/video.mp4"
                 />
             </div>
           </div>
@@ -345,7 +345,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -359,7 +359,7 @@
                   preload="none"
                   loop
                   muted
-                  src="/static/videos/video.mp4"
+                  src="static/videos/video.mp4"
                 />
             </div>
           </div>
@@ -368,7 +368,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -380,7 +380,7 @@
                   class="lazyload lazypreload"
                   data-sizes="auto"
                   data-aspectratio="0.8029411764705883"
-                  data-src="/static/images/pic1.png"
+                  data-src="static/images/pic1.png"
                 />
             </div>
           </div>
@@ -389,7 +389,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -410,7 +410,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -424,7 +424,7 @@
                   preload="none"
                   loop
                   muted
-                  src="/static/videos/video.mp4"
+                  src="static/videos/video.mp4"
                 />
             </div>
           </div>
@@ -433,7 +433,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -445,7 +445,7 @@
                   class="lazyload lazypreload"
                   data-sizes="auto"
                   data-aspectratio="0.8029411764705883"
-                  data-src="/static/images/pic3.png"
+                  data-src="static/images/pic3.png"
                 />
             </div>
           </div>
@@ -454,7 +454,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -466,7 +466,7 @@
                   class="lazyload lazypreload"
                   data-sizes="auto"
                   data-aspectratio="0.8029411764705883"
-                  data-src="/static/images/pic1.png"
+                  data-src="static/images/pic1.png"
                 />
             </div>
           </div>
@@ -475,7 +475,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -496,7 +496,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -508,7 +508,7 @@
                   class="lazyload lazypreload"
                   data-sizes="auto"
                   data-aspectratio="0.8029411764705883"
-                  data-src="/static/images/pic3.png"
+                  data-src="static/images/pic3.png"
                 />
             </div>
           </div>
@@ -517,7 +517,7 @@
              <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "/static/images/heart.png"/>565</h4>
+                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -529,7 +529,7 @@
                   class="lazyload lazypreload"
                   data-sizes="auto"
                   data-aspectratio="0.8029411764705883"
-                  data-src="/static/images/pic1.png"
+                  data-src="static/images/pic1.png"
                 />
             </div>
           </div>
