--- a/section.html
+++ b/section.html
@@ -41,7 +41,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
+                <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -55,8 +55,7 @@
                   preload="none"
                   loop
                   muted
-                  src="static/videos/video.mp4"
-                />
+                  src="static/videos/video.mp4"></video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.7544606304490119s;">
@@ -64,7 +63,7 @@
               <div div class="hero-marquee-item__title">York</div>
 
               <div class="hero-marquee-item__tags" >
-                    <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
+                <h4 class="hero-marquee-item__tag"><img class = "heart" src = "static/images/heart.png"/>565</h4>
               </div>
             </div>
 
@@ -99,8 +98,8 @@
                   preload="none"
                   loop
                   muted
-                  src="static/videos/video.mp4"
-                />
+                  src="static/videos/video.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.7193330553544607s;">
@@ -164,8 +163,8 @@
                   preload="none"
                   loop
                   muted
-                  src="static/videos/video.mp4"
-                />
+                  src="static/videos/video.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.2126081951559765s;">
@@ -313,8 +312,8 @@
                   preload="none"
                   loop
                   muted
-                  src="static/videos/video.mp4"
-                />
+                  src="static/videos/video.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.6702767303509797s;">
@@ -336,8 +335,8 @@
                   preload="none"
                   loop
                   muted
-                  src="static/videos/video.mp4"
-                />
+                  src="static/videos/video.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.19843046966953426s;">
@@ -359,8 +358,8 @@
                   preload="none"
                   loop
                   muted
-                  src="static/videos/video.mp4"
-                />
+                  src="static/videos/video.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.9178937722325657s;">
@@ -424,8 +423,8 @@
                   preload="none"
                   loop
                   muted
-                  src="static/videos/video.mp4"
-                />
+                  src="static/videos/video.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.6261111941041646s;">
