--- a/section.html
+++ b/section.html
@@ -25,15 +25,17 @@
             </div>
 
             <div div class="hero-marquee-item__media">
-                <img
-                  alt="Aurélien Salomon"
+                <video
                   width="273"
                   height="340"
+                  playsinline
                   class="lazyload lazypreload"
-                  data-sizes="auto"
-                  data-aspectratio="0.8029411764705883"
-                  data-src="static/images/pic1.png"
-                />
+                  data-autoplay
+                  preload="none"
+                  loop
+                  muted
+                  src="static/videos/video-1.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.46265018307717787s;">
@@ -55,7 +57,7 @@
                   preload="none"
                   loop
                   muted
-                  src="static/videos/video.mp4"></video>
+                  src="static/videos/video-2.mp4"></video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.7544606304490119s;">
@@ -68,15 +70,17 @@
             </div>
 
             <div div class="hero-marquee-item__media">
-                <img
-                  alt="Victa Wille"
+                <video
                   width="273"
                   height="340"
+                  playsinline
                   class="lazyload lazypreload"
-                  data-sizes="auto"
-                  data-aspectratio="0.8029411764705883"
-                  data-src="static/images/pic2.png"
-                />
+                  data-autoplay
+                  preload="none"
+                  loop
+                  muted
+                  src="static/videos/video-3.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.43070406378755677s;">
@@ -98,7 +102,7 @@
                   preload="none"
                   loop
                   muted
-                  src="static/videos/video.mp4">
+                  src="static/videos/video-4.mp4">
                 </video>
             </div>
           </div>
@@ -112,15 +116,17 @@
             </div>
 
             <div div class="hero-marquee-item__media">
-                <img
-                  alt="Chris Owens"
+                <video
                   width="273"
                   height="340"
+                  playsinline
                   class="lazyload lazypreload"
-                  data-sizes="auto"
-                  data-aspectratio="0.8029411764705883"
-                  data-src="static/images/pic3.png"
-                />
+                  data-autoplay
+                  preload="none"
+                  loop
+                  muted
+                  src="static/videos/video-5.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.47110052078448605s;">
@@ -133,15 +139,17 @@
             </div>
 
             <div div class="hero-marquee-item__media">
-                <img
-                  alt="Andrea Jelić"
+                <video
                   width="273"
                   height="340"
+                  playsinline
                   class="lazyload lazypreload"
-                  data-sizes="auto"
-                  data-aspectratio="0.8029411764705883"
-                  data-src="static/images/pic2.png"
-                />
+                  data-autoplay
+                  preload="none"
+                  loop
+                  muted
+                  src="static/videos/video-6.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.37536105943986375s;">
@@ -163,7 +171,7 @@
                   preload="none"
                   loop
                   muted
-                  src="static/videos/video.mp4">
+                  src="static/videos/video-7.mp4">
                 </video>
             </div>
           </div>
@@ -177,15 +185,17 @@
             </div>
 
             <div div class="hero-marquee-item__media">
-                <img
-                  alt="Lilla Bardenova"
+                <video
                   width="273"
                   height="340"
+                  playsinline
                   class="lazyload lazypreload"
-                  data-sizes="auto"
-                  data-aspectratio="0.8029411764705883"
-                  data-src="static/images/pic1.png"
-                />
+                  data-autoplay
+                  preload="none"
+                  loop
+                  muted
+                  src="static/videos/video-8.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.4170964275548714s;">
@@ -198,15 +208,17 @@
             </div>
 
             <div div class="hero-marquee-item__media">
-                <img
-                  alt="Vladimir Gruev"
+                <video
                   width="273"
                   height="340"
+                  playsinline
                   class="lazyload lazypreload"
-                  data-sizes="auto"
-                  data-aspectratio="0.8029411764705883"
-                  data-src="static/images/pic2.png"
-                />
+                  data-autoplay
+                  preload="none"
+                  loop
+                  muted
+                  src="static/videos/video-9.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.6809443027285556s;">
@@ -219,15 +231,17 @@
             </div>
 
             <div div class="hero-marquee-item__media">
-                <img
-                  alt="Daniele Buffa"
+                <video
                   width="273"
                   height="340"
+                  playsinline
                   class="lazyload lazypreload"
-                  data-sizes="auto"
-                  data-aspectratio="0.8029411764705883"
-                  data-src="static/images/pic3.png"
-                />
+                  data-autoplay
+                  preload="none"
+                  loop
+                  muted
+                  src="static/videos/video-10.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.9893855840183378s;">
@@ -240,15 +254,17 @@
             </div>
 
             <div div class="hero-marquee-item__media">
-                <img
-                  alt="Elif Kameşoğlu"
+                <video
                   width="273"
                   height="340"
+                  playsinline
                   class="lazyload lazypreload"
-                  data-sizes="auto"
-                  data-aspectratio="0.8029411764705883"
-                  data-src="static/images/pic1.png"
-                />
+                  data-autoplay
+                  preload="none"
+                  loop
+                  muted
+                  src="static/videos/video-11.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.5243070309370953s;">
@@ -261,15 +277,17 @@
             </div>
 
             <div div class="hero-marquee-item__media">
-                <img
-                  alt="Mercedes Bazan"
+                <video
                   width="273"
                   height="340"
+                  playsinline
                   class="lazyload lazypreload"
-                  data-sizes="auto"
-                  data-aspectratio="0.8029411764705883"
-                  data-src="static/images/pic2.png"
-                />
+                  data-autoplay
+                  preload="none"
+                  loop
+                  muted
+                  src="static/videos/video-12.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.7740204969696518s;">
@@ -282,15 +300,17 @@
             </div>
 
             <div div class="hero-marquee-item__media">
-                <img
-                  alt="Aurélien Salomon"
+                <video
                   width="273"
                   height="340"
+                  playsinline
                   class="lazyload lazypreload"
-                  data-sizes="auto"
-                  data-aspectratio="0.8029411764705883"
-                  data-src="static/images/pic3.png"
-                />
+                  data-autoplay
+                  preload="none"
+                  loop
+                  muted
+                  src="static/videos/video-1.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.5655710058977778s;">
@@ -312,7 +332,7 @@
                   preload="none"
                   loop
                   muted
-                  src="static/videos/video.mp4">
+                  src="static/videos/video-2.mp4">
                 </video>
             </div>
           </div>
@@ -335,7 +355,7 @@
                   preload="none"
                   loop
                   muted
-                  src="static/videos/video.mp4">
+                  src="static/videos/video-3.mp4">
                 </video>
             </div>
           </div>
@@ -358,7 +378,7 @@
                   preload="none"
                   loop
                   muted
-                  src="static/videos/video.mp4">
+                  src="static/videos/video-4.mp4">
                 </video>
             </div>
           </div>
@@ -372,15 +392,17 @@
             </div>
 
             <div div class="hero-marquee-item__media">
-                <img
-                  alt="Chris Owens"
+                <video
                   width="273"
                   height="340"
+                  playsinline
                   class="lazyload lazypreload"
-                  data-sizes="auto"
-                  data-aspectratio="0.8029411764705883"
-                  data-src="static/images/pic1.png"
-                />
+                  data-autoplay
+                  preload="none"
+                  loop
+                  muted
+                  src="static/videos/video-5.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.38483180999839084s;">
@@ -393,15 +415,17 @@
             </div>
 
             <div div class="hero-marquee-item__media">
-                <img
-                  alt="Andrea Jelić"
+                <video
                   width="273"
                   height="340"
+                  playsinline
                   class="lazyload lazypreload"
-                  data-sizes="auto"
-                  data-aspectratio="0.8029411764705883"
-                  data-src="static/images/pic2.png"
-                />
+                  data-autoplay
+                  preload="none"
+                  loop
+                  muted
+                  src="static/videos/video-6.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.9467175091832842s;">
@@ -423,7 +447,7 @@
                   preload="none"
                   loop
                   muted
-                  src="static/videos/video.mp4">
+                  src="static/videos/video-7.mp4">
                 </video>
             </div>
           </div>
@@ -437,15 +461,17 @@
             </div>
 
             <div div class="hero-marquee-item__media">
-                <img
-                  alt="Lilla Bardenova"
+                <video
                   width="273"
                   height="340"
+                  playsinline
                   class="lazyload lazypreload"
-                  data-sizes="auto"
-                  data-aspectratio="0.8029411764705883"
-                  data-src="static/images/pic3.png"
-                />
+                  data-autoplay
+                  preload="none"
+                  loop
+                  muted
+                  src="static/videos/video-8.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.9873122787220626s;">
@@ -458,15 +484,17 @@
             </div>
 
             <div div class="hero-marquee-item__media">
-                <img
-                  alt="Vladimir Gruev"
+                <video
                   width="273"
                   height="340"
+                  playsinline
                   class="lazyload lazypreload"
-                  data-sizes="auto"
-                  data-aspectratio="0.8029411764705883"
-                  data-src="static/images/pic1.png"
-                />
+                  data-autoplay
+                  preload="none"
+                  loop
+                  muted
+                  src="static/videos/video-9.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.932659822205843s;">
@@ -479,15 +507,17 @@
             </div>
 
             <div div class="hero-marquee-item__media">
-                <img
-                  alt="Daniele Buffa"
+                <video
                   width="273"
                   height="340"
+                  playsinline
                   class="lazyload lazypreload"
-                  data-sizes="auto"
-                  data-aspectratio="0.8029411764705883"
-                  data-src="static/images/pic2.png"
-                />
+                  data-autoplay
+                  preload="none"
+                  loop
+                  muted
+                  src="static/videos/video-10.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.1589929914437086s;">
@@ -500,15 +530,17 @@
             </div>
 
             <div div class="hero-marquee-item__media">
-                <img
-                  alt="Elif Kameşoğlu"
+                <video
                   width="273"
                   height="340"
+                  playsinline
                   class="lazyload lazypreload"
-                  data-sizes="auto"
-                  data-aspectratio="0.8029411764705883"
-                  data-src="static/images/pic3.png"
-                />
+                  data-autoplay
+                  preload="none"
+                  loop
+                  muted
+                  src="static/videos/video-11.mp4">
+                </video>
             </div>
           </div>
           <div class="hero-marquee-item" data-lazy-parent style="--reveal-delay: 0.2066818790871473s;">
@@ -521,15 +553,17 @@
             </div>
 
             <div div class="hero-marquee-item__media">
-                <img
-                  alt="Mercedes Bazan"
+                <video
                   width="273"
                   height="340"
+                  playsinline
                   class="lazyload lazypreload"
-                  data-sizes="auto"
-                  data-aspectratio="0.8029411764705883"
-                  data-src="static/images/pic1.png"
-                />
+                  data-autoplay
+                  preload="none"
+                  loop
+                  muted
+                  src="static/videos/video-12.mp4">
+                </video>
             </div>
           </div>
       </div>
